# guitar-center-api

./: .coverage  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
api/: db_config.py  exceptions.py  main.py  routes_config.py
api/models/: base.py  users.py
api/routers/: auth.py  health.py  users.py
api/schemas/requests/: users.py
api/schemas/resources/: users.py
api/services/: users.py
api/utils/: auth.py  db.py
migrations/: env.py
migrations/versions/: 199538d9dd2b_add_users_table.py
tests/: conftest.py  test_health.py
tests/fixtures/: users.py
tests/users/: test_create_user.py  test_get_user.py  test_user_login.py
